<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.TimelineActivity">

    <TextView
        android:id="@+id/txtBuilder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Labels"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTotals"
        android:layout_width="500dp"
        android:layout_height="600dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuilder">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/labelListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:choiceMode="multipleChoice" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCard"
        android:layout_width="500dp"
        android:layout_height="210dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTotals">

        <Button
            android:id="@+id/labelBtnAdd"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="Add Label" />


        <EditText
            android:id="@+id/labelAddLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="185dp"
            android:ems="10"
            android:hint="Name to Add"
            android:inputType="text" />

        <Button
            android:id="@+id/labelBtnUpdate"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:text="Update Selected" />

        <EditText
            android:id="@+id/labelUpdateLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="185dp"
            android:ems="10"
            android:hint="Name to update to"
            android:inputType="text" />

        <Button
            android:id="@+id/labelBtnRemove"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:enabled="false"
            android:text="Remove Label" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>