...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnMore"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorSecondary"
        android:src="@android:drawable/ic_menu_manage"
...

            <TextView
                android:id="@+id/txtBreakfastCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:text="Breakfast"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtBreakfastCals"
                android:layout_width="wrap_content"
...
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_exercise" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_food" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
...
